<resources>
    <string name="app_name">Космолот Мания</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    CosmoMenuFragment-->
    <string name="cosmo_arcanoid">Cosmo \nArcanoid</string>
    <string name="start">Start</string>
    <string name="contin">Continue</string>
    <string name="quit">Quit</string>
    <string name="cosmo_mania">Космолот Мания</string>
    <string name="game_over">Game Over!</string>
    <string name="result_text">You Lose!</string>
    <string name="again">Again?</string>
    <string name="menu">Menu</string>

    <!--    ArcGameFragment-->


</resources>