<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars_sky"
    tools:context=".fragments.CosmoMenuFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="@string/cosmo_mania"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_200"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/cosmo_arcanoid"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_200"
        android:textSize="27sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="#EA80FC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/contin"
        android:textAllCaps="true"
        android:textColor="#EA80FC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/quitBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="122dp"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/quit"
        android:textAllCaps="true"
        android:textColor="#EA80FC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>