<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars_sky"
    tools:context=".fragments.CosmoResultFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gameOverTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#EA80FC"
        android:textSize="70sp"
        android:textStyle="bold"
        android:text="@string/game_over"
        android:fontFamily="@font/audiowide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#EA80FC"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/result_text"
        android:fontFamily="@font/audiowide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverTV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playAgainBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="16dp"
        android:text="@string/again"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#EA80FC"
        android:fontFamily="@font/audiowide"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menuBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#EA80FC"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgainBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>